JNG-4838 refactor helpers